* Added typoscript documentation * Added/corrected xclasses * Added draft documentation * Deactivated department fields in tca
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/x4epublication/trunk@37456 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,16 +1,18 @@
-(add new changes on top of this file)
+2010-08-30 Markus Stauffiger <markus-at-4eyes.ch>
+	* Added typoscript documentation
+	* Added/corrected xclasses
+	* Added draft documentation
+	* Deactivated department fields in tca
 
-2010-08-25 Michel Georgy <michel@4eyes.ch>
+2010-08-25 Michel Georgy <michel-at-4eyes.ch>
 	* fixed possible sql injections
 
-2010-08-25 Markus Stauffiger <markus@4eyes.ch>
+2010-08-25 Markus Stauffiger <markus-at-4eyes.ch>
 	* Cleaned up code
 	* Documented
 
-10-07-09 by alessandro@4eyes.ch
-	- Start Year for displaying publications is now configurable in typoscript by setting eg. "plugin.tx_x4epublication_pi1.startYear = 1998" 
+2010-07-09 by alessandro-at-4eyes.ch
+	* Start Year for displaying publications is now configurable in typoscript by setting eg. "plugin.tx_x4epublication_pi1.startYear = 1998"
 
-
-05-09-10 Markus Stauffiger  <markus@4eyes.ch>
-
+2005-09-10 Markus Stauffiger  <markus-at-4eyes.ch>
 	* Initial release
