--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-31 Markus Stauffiger <markus-at-4eyes.ch>
+	* Updated typoscript documentation
+	* Added manual
+
 2010-08-30 Markus Stauffiger <markus-at-4eyes.ch>
 	* Added typoscript documentation
 	* Added/corrected xclasses
