* Updated add.html to include return false in all onclick events
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/x4epublication/trunk@38812 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-10-01 Markus Stauffiger <markus-at-4eyes.ch>
+	* Updated add.html to include return false in all onclick events
+
 2010-08-31 Markus Stauffiger <markus-at-4eyes.ch>
 	* Updated typoscript documentation
 	* Added manual
